add alert message on succesful creation of account

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "bootstrap": "^4.5.3",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^10.13.3",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
